HTML Doc params & returns
Finish adding params and return info

--- a/doc/ldoc.css
+++ b/doc/ldoc.css
@@ -17,3 +17,5 @@ pre .user-keyword { color: #800080; }
 pre .prompt { color: #558817; }
 pre .url { color: #272fc2; text-decoration: underline; }
 
+.text-type { color: #75A837; }
+
