HTML Doc code style
Change code color style to a darker palette

--- a/doc/ldoc.css
+++ b/doc/ldoc.css
@@ -12,12 +12,13 @@ pre .string { color: #8080ff; }
 pre .number { color: #f8660d; }
 pre .operator { color: #2239a8; font-weight: bold; }
 pre .preprocessor, pre .prepro { color: #a33243; }
-pre .global { color: #800080; }
-pre .user-keyword { color: #800080; }
+pre .global { color: #c020c0; }
+pre .user-keyword { color: #c020c0; }
 pre .prompt { color: #558817; }
 pre .url { color: #272fc2; text-decoration: underline; }
 
 .text-type { color: #75A837; }
 
 ul { list-style-type: none; }
+pre { background-color: #333; color: #fff; }
 
